Fix bug: img with scrollbar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: #281755;
     color: #F5F3F3;
+    overflow-x: hidden;
 }
 nav {
     background-color: #F5F3F3;
@@ -13,6 +14,9 @@ h1 {
 }
 p {
     padding: 5% 5%;
+}
+img {
+    overflow-x: hidden;
 }
 footer {
     display: block;
